# zenon-build

./: .gitignore  .ocamlformat  LICENSE.md  README.md  TODO.md  dune-project  flake.nix  zenon.opam
lib/: build.ml  cmake.ml  command.ml  compiler.ml  compiler_set.ml  config.ml  dune  eff.ml  flags.ml  linker.ml  log_file.ml  makefile.ml  node.ml  object_file.ml  pkg_config.ml  plan.ml  print.ml  source_file.ml  types.ml  util.ml  zenon.ml
test/: .gitignore  hello_dats.c  zenon.yaml
test/ext-app/: main.c  myapp  zenon.yaml
test/ext-lib/: utils.c  utils.h  zenon.yaml
test/multi-lang/: asm_func.s  main.c
test/mylib/: lib.c  lib.h
test/parallel-test/: file1.c  file2.c  file3.c  main.c
test/say-hi/: zenon.yaml
test/simple-ats/: hello.dats  message.sats
test/simple-c/: main.c  math.c  math.h
test/simple-cpp/: greeter.cpp  greeter.hpp  main.cpp
test/simple-hs/: Lib.hs  Main.hs
test/simple-ml/: a.ml  hello.ml
test/simple-sml/: factorial.sml  hello.mlb  hello.sml
test/test-cycle/: zenon.yaml
test/use-mylib/: main.c
